# PDCurses

./: .gitignore  .label-2_4  .label-2_5  .label-2_6  .travis.yml  CMake.README  CMake.md  CMakeLists.txt  HISTORY  HISTORY.md  IMPLEMNT  IMPLEMNT.md  INSTALL  Makefile  Makefile.in  PDCurses-2.4.spec  PDCurses-2.5.spec  PDCurses-2.6.spec  PDCurses-2.7.spec  PDCurses.spec  README  README.Plan9  README.md  TODO  aclocal.m4  acs_defs.h  appveyor.yml  borland.lrf  config.guess  config.h.in  config.sub  configure  configure.ac  configure.in  curses.h  curspriv.h  exp-base.def  install-sh  label.2.4  libobjs  (+24 more)
cmake/: FindSDL2.cmake  PDCursesConfig.cmake  README.md  build_dependencies.cmake  build_options.cmake  compilers.cmake  config.cmake.in  dll_version.cmake  dos.cmake  dos.ps1  dos.sh  gen_config_header.cmake  get_version.cmake  install.cmake  project_common.cmake  resource.in.cmake  target_arch.cmake  version.in.cmake  watcom_open_dos16_toolchain.cmake  watcom_open_dos32_toolchain.cmake  watcom_open_os2v2_toolchain.cmake  x11.cmake
cmake/sdl2_ttf/: CMakeLists.txt
common/: .label-pre_static  README.md  WriteEnv.nsh  accommon.m4  deffont.h  deficon.h  defines.h  getopt.c  icon32.xbm  icon64.xbm  iconbmp.h  isnt.nsh  libobjs.mif  loader.c  makedist.mif  path.nsh  pdccolor.c  pdccolor.h  pdccolor.txt  pdcurses.rc  rxdef.h  rxpack.c  rxpack.h  watcom.mif
demos/: CMakeLists.txt  Makefile.in  README  README.md  firework.c  mk.cmd  mkfile  nctests.mif  ncurses_cfg.h  newdemo.c  newtest.c  ozdemo.c  picsview.c  ptest.c  rain.c  speed.c  test_init.c  testcurs.c  tui.c  tui.h  tuidemo.c  version.c  worm.c  xmas.c
doc/: Makefile.in  README  README.md  intro.man  intro.md  intro.txt  latin-1.man  latin-1.txt  manext.c  overview.man  sdl.md  sdl.txt  sdl2.txt  x11.man  x11.md  x11.txt
docs/: CNAME  HISTORY.md  IMPLEMNT.md  MANUAL.md  PDCurses.md  README.md  USERS.md  i.md  index.html  mmbasic.css  mmmain.css  mmreal.css
dos/: CMakeLists.txt  KERNEL.ERR  Makefile  Makefile.bcc  Makefile.dmc  Makefile.msc  Makefile.w16  Makefile.w4g  Makefile.wat  Makefile.wcc  PDCURSES.LIB  README  README.md  bccdos.ini  bccdos.lrf  bccdos.mak  bccdos.rsp  dmcdos.mak  dos-bcc.rsp  gccdos.lrf  gccdos.mak  mscdos.ini  mscdos.lrf  mscdos.mak  msvcdos.mak  naptest.c  pdcclip.c  pdcdisp.c  pdcdos.h  pdcgetsc.c  pdcgo32.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  wccdos.lrf  wccdos.mak  wccdos16.mak  wccdos4g.mak
dosvga/: Makefile  Makefile.bcc  Makefile.wcc  README.md  cp437.h  font.h  hexize.c  mk_font.c  pdcdisp.c  pdcdos.h  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcvesa.h
flexos/: README  fo_16bit.c  fo_8bit.c  fo_gname.c  pdcdisp.c  pdcgetsc.c  pdcgo32.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c
man/: HISTORY.md  IMPLEMNT.md  MANUAL.md  Makefile  README.md  USERS.md  manext.awk  manext.py  mkman.sh  sdl2.md  x11.md
ncurses/: CMakeLists.txt  README.md  makefile
os2/: CMakeLists.txt  Makefile  Makefile.bcc  Makefile.wcc  README  README.md  bccos2.ini  bccos2.lrf  bccos2.mak  gccos2.mak  ibmos2.ini  iccos2.ini  iccos2.lrf  iccos2.mak  junkfile  os2-bcc.rsp  os2ibm.ini  owos2.mak  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcos2.h  pdcprint.c  pdcscrn.c  pdcsetsc.c  pdcurses.def  pdcurses.lnk  pdcutil.c  wccos2.lrf  wccos2.mak
panel/: Makefile.in  README  panel.c
pdcurses/: Makefile.aix.in  Makefile.in  README  addch.c  addchstr.c  addstr.c  attr.c  beep.c  bkgd.c  border.c  clear.c  color.c  debug.c  delch.c  deleteln.c  delphicompat.c  deprec.c  getch.c  getstr.c  getyx.c  inch.c  inchstr.c  initscr.c  inopts.c  insch.c  insstr.c  instr.c  kernel.c  keyname.c  mouse.c  move.c  outopts.c  overlay.c  pad.c  panel.c  pdcdebug.c  pdckey.c  pdcutil.c  pdcwin.c  printw.c  (+11 more)
plan9/: README  README.Plan9  README.md  curses.h  header.patch  mkfile  mkfile_demo  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcplan9.c  pdcplan9.h  pdcscrn.c  pdcsetsc.c  pdcutil.c
saa/: Makefile.in
sdl1/: Makefile  Makefile.mng  Makefile.vc  README  README.md  deffont.h  deficon.h  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c  pdcutil.c  sdltest.c  versions.mif
sdl2/: CMakeLists.txt  Makefile  Makefile.vc  README.md  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c  pdcutil.c  sdltest.c  vcwin32.mak  versions.mif
tools/: Makefile.in  manext.c
vt/: CMakeLists.txt  Makefile  Makefile.bcc  Makefile.dmc  Makefile.vc  Makefile.wcc  README.md  makefile  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcvt.h
win32/: CMakeLists.txt  Makefile  Makefile.bcc  Makefile.vc  Makefile.wcc  README  README.md  bcc55win32.mak  bccwin32.lrf  bccwin32.mak  curses.def  curses_lcc.def  cursesw.def  cursesw_lcc.def  dmcwin32.mak  gccwin32.mak  lccwin32.mak  mingwin32-nomsys.mak  mingwin32.mak  mott.mak  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c  pdcurses.def  pdcurses.rc  pdcursesw.def  pdcutil.c  pdcwin.h  vcwin32.mak  w95-bcc.rsp  wccwin32.lrf  wccwin32.mak
win32a/: Makefile.bcc  Makefile.dmc  Makefile.lcc  Makefile.mng  Makefile.vc  Makefile.w16  Makefile.w32  README  README.md  dmcwin32.mak  gccwin32.mak  iccwin32.mak  lccwin32.mak  mingwin32.mak  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcursew.def  pdcutil.c  pdcwin.h  vcwin32.mak  wccwin16.mak  wccwin32.mak
wincon/: CMakeLists.txt  Makefile  Makefile.bcc  Makefile.dmc  Makefile.lcc  Makefile.mng  (+15 more)
x11/: CMakeLists.txt  Makefile.aix.in  Makefile.in  PDCurses.spec  README  README.md  ScrollBox.c  ScrollBox.h  ScrollBoxP.h  XCurses.def  aclocal.m4  big_icon.xbm  compose.h  config.h.in  config_cmake.h.in  configure  configure.ac  latin1kbd.h  little_icon.xbm  ncurses_cfg.h  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcx11.c  pdcx11.h  sb.c  scrlbox.c  x11.c  xcurs32.xbm  xcurs64.xbm  xcurses-config.in  xcurses.exp
x11/debian/: changelog  control  copyright  rules
x11/process/: x11.c  x11.h  x11common.c  x11curses.c
x11/thread/: junkfile  x11.c  x11.h  x11common.c  x11curses.c
(+43 files in other folders)
