add_executable(firework firework.c)
add_executable(newdemo newdemo.c)
add_executable(ptest ptest.c)
add_executable(rain rain.c)
add_executable(testcurs testcurs.c)
add_executable(tuidemo tuidemo.c tui.c tui.h)
add_executable(worm worm.c)
add_executable(xmas xmas.c)

target_link_libraries(firework XCurses)
target_link_libraries(newdemo XCurses)
target_link_libraries(ptest XCurses)
target_link_libraries(rain XCurses)
target_link_libraries(testcurs XCurses)
target_link_libraries(tuidemo XCurses)
target_link_libraries(worm XCurses)
target_link_libraries(xmas XCurses)

install(TARGETS firework DESTINATION examples)
install(TARGETS newdemo DESTINATION examples)
install(TARGETS ptest DESTINATION examples)
install(TARGETS rain DESTINATION examples)
install(TARGETS testcurs DESTINATION examples)
install(TARGETS tuidemo DESTINATION examples)
install(TARGETS worm DESTINATION examples)
install(TARGETS xmas DESTINATION examples)


